fixed overlapping navbar

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2391,9 +2391,14 @@ section {
   align-items: center;
   width: 100%;
   height: 45vh;
-  min-height: 320px;
-  clip-path: inset(0% 0% 82% 0%);
+  min-height: 288px;
+  clip-path: inset(0% 0% 80.1% 0%);
   transition: clip-path 0.5s ease-in-out;
+}
+@media (min-width: 650px) {
+  .navbar {
+    min-height: 300px;
+  }
 }
 @media (min-width: 834px) {
   .navbar {
@@ -2450,7 +2455,7 @@ section {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 18%;
+  height: 19.9999%;
 }
 @media (min-width: 834px) {
   .navbar__logo-container {
@@ -2517,7 +2522,7 @@ section {
   margin-top: 1rem;
 }
 .navbar__container-icons {
-  margin: 5vh 0;
+  margin: 1rem 0 5vh;
   width: 70px;
   display: flex;
   justify-content: space-between;
