--- a/src/stylesheets/layout/_navbar.scss
+++ b/src/stylesheets/layout/_navbar.scss
@@ -6,9 +6,12 @@
   align-items: center;
   width: 100%;
   height: 45vh;
-  min-height: 320px;
-  clip-path: inset(0% 0% 82% 0%);
+  min-height: 288px;
+  clip-path: inset(0% 0% 80.1% 0%);
   transition: clip-path 0.5s ease-in-out;
+  @include mq(small) {
+    min-height: 300px;
+  }
   @include mq(large) {
     padding: 1.25vw;
     justify-content: space-between;
@@ -50,7 +53,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 18%;
+    height: 19.9999%;
     @include mq(large) {
       height: auto;
     }
@@ -121,7 +124,7 @@
   }
 
   &__container-icons {
-    margin: 5vh 0;
+    margin: 1rem 0 5vh;
     width: 70px;
     display: flex;
     justify-content: space-between;
